# corrector-ortografic

./: .gitignore  LICENSE  README
trunk/: gen.bat
trunk/Hunspell/: NetHunspell.sln
trunk/Hunspell/DllHunspell/: DllHunspell.cpp  DllHunspell.h  DllHunspell.vcproj  stdafx.h
trunk/Hunspell/NetHunspell/: AnsiMarshaller.cs  NetHunspell.csproj  main.cs
trunk/Hunspell/RHunspell/: RHunspell.h  RHunspell.vcproj  ReadMe.txt  hunspell.rb  stdafx.cpp
trunk/Hunspell/motor/: ChangeLog  Makefile  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  configure  configure.ac
trunk/Hunspell/motor/intl/: Makefile
trunk/Hunspell/motor/m4/: Makefile
trunk/Hunspell/motor/man/: Makefile.in  hunspell.4
trunk/Hunspell/motor/man/hu/: Makefile  Makefile.in  hunspell.1
trunk/Hunspell/motor/po/: hu.po
trunk/Hunspell/motor/src/: Makefile.in
trunk/Hunspell/motor/src/hunspell/: Makefile  makefile.mk
trunk/Hunspell/motor/src/parsers/: Makefile  Makefile.am  Makefile.in  htmlparser.hxx  latexparser.cxx  latexparser.hxx  manparser.hxx  textparser.hxx
trunk/Hunspell/motor/src/tools/: Makefile  hunmorph.cxx  hunspell.cxx
trunk/Hunspell/motor/tests/: Makefile  Makefile.am  Makefile.in  test.sh
trunk/Hunspell/proves/: prova_01.rb  prova_02.rb  prova_03.rb  prova_04.rb  prova_05.rb  prova_06.rb  prova_07.rb  prova_08.rb  prova_09.rb  prova_10.rb  prova_11.rb
trunk/OXT/: description.xml  description.xml~  dictionaries.xcu  release-notes_ca.html  release-notes_en.html  update.xml
trunk/RHunspell/: RHunspell.sln
trunk/RHunspell/RHunspell/: RHunspell.cpp  stdafx.h
trunk/RHunspell/motor/: Makefile.am  config.h  config.h.in  config.status
trunk/RHunspell/motor/src/hunspell/: Makefile.am  Makefile.in
trunk/RHunspell/motor/src/tools/: Makefile.am  Makefile.in  hunstem.cxx  makealias  munch.c  unmunch.c  unmunch.h
trunk/RHunspell/proves/: entrades_neoloteca.txt  prova_01.rb  prova_03.rb
trunk/aspell/: %as_language%.alias  %as_lng%.multi  CHANGES  Copyright  Makefile.pre  README  info
trunk/aspell/proc/: README  pre  proc
trunk/canvis/: canvis_jaumeortola.txt
trunk/eines/: sillabes.pm
trunk/entrades/: abreviatures_duarte.txt  antropònims.txt  avl.txt  avl_amb_és_esa.txt  avl_gen.txt  avl_val.txt  diec.txt  diec2.txt  gentilicis.txt  gentilicis_estrangers.txt  irregulars.txt  irregulars_avl.txt  irregulars_avl_gen.txt  irregulars_avl_val.txt  irregulars_diec.txt  irregulars_diec2.txt  irregulars_termcat.txt  llinatges.txt  marques.txt  mes_paraules.txt  regles.txt  termcat.txt  topònims.txt  topònims_estrangers.txt  web.txt
trunk/explora/: blocs.rb  eines.rb  explora.rb  font.rb  proces.rb  resultat.rb
trunk/genera/: Genera.sln
trunk/genera/Tests/: BaseTest.cs  GrupTest.cs  IMostraTest.cs  MostraTestsArbre.cs  Test.cs  Tests.csproj
trunk/genera/catala/: Cat.cs  IdentificadorAntroponims.cs  IdentificadorCat.cs  IdentificadorDIEC.cs  IdentificadorDiversos.cs  IdentificadorGentilicis.cs  IdentificadorToponims.cs  ParadigmaCat.cs  Paraula.cs  catala.csproj
trunk/genera/nucli/: Principal.Designer.cs  Principal.cs  Principal.resx  Program.cs  VersioDiccionari.cs  exemples.cs  genera.cs  genera.csproj  qualitat.cs  tests.cs
trunk/genera/proves/: catalan.aff  exemples.txt  qualitat.rb
trunk/genera/xspell/: CasRegla.cs  Entrada.cs  Excepcio.cs  FitxerFont.cs  Identificador.cs  ItemDic.cs  ItemDicException.cs  LiniaMarques.cs  Marca.cs  Marques.cs  MorfoGram.cs  Mot.cs  NoParadigma.cs  Paradigma.cs  Regla.cs  Regles.cs  (+1 more)
trunk/propostes/: 060918.txt  criteris_AVL.odt  nous_01.txt
trunk/resultats/: avl.aff  avl.dic  avl.myspell.aff  avl.myspell.dic  catalan.aff  catalan.dic  catalan.myspell.dic  catalan_i.aff  catalan_i.dic  catalan_myspell.aff  catalan_myspell.dic
trunk/scripts/: gen_ispell.pl  genera_aff.pl  genera_dic.pl  revisa.rb
(+56 files in other folders)
