lib_LIBRARIES = libhunspell.a
libhunspell_a_SOURCES=affentry.cxx affixmgr.cxx csutil.cxx \
		     dictmgr.cxx hashmgr.cxx hunspell.cxx \
	             suggestmgr.cxx utf_info.cxx license.myspell license.hunspell

include_HEADERS=affentry.hxx htypes.hxx affixmgr.hxx \
	        csutil.hxx hunspell.hxx atypes.hxx dictmgr.hxx \
		suggestmgr.hxx baseaffix.hxx hashmgr.hxx langnum.hxx

EXTRA_DIST=hunspell.dsp makefile.mk README
